objects/Document_Review_Feedback_Form__c.object
<CustomObject><fields>
        <fullName>Additional_info__c</fullName>
        <label>Specify the additional info required</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Capacity_Level10__c</fullName>
        <label>Capacity Level</label>
        <picklist>
            <picklistValues>
                <fullName>Highly Effective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Effective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Effective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to Access</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Capacity_Level11__c</fullName>
        <label>Capacity Level</label>
        <picklist>
            <picklistValues>
                <fullName>Highly Effective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Effective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Effective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to Access</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Capacity_Level12__c</fullName>
        <label>Capacity Level</label>
        <picklist>
            <picklistValues>
                <fullName>Highly Effective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Effective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Effective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to Access</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Capacity_to_ImplementSV__c</fullName>
        <label>Capacity to Implement</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Capacity_to_implement__c</fullName>
        <label>Capacity to implement</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Did_you_conduct_a_Site_Visit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select the checkbox if you need to complete a feedback form for a Site Visit.</inlineHelpText>
        <label>Do you have feedback from a Site Visit?</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>DistrictNameCode__c</fullName>
        <formula>SchoolDistrict__r.Parent.SCHOOL_NUMBER__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>District Name/Code</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Document_Review_Feedback__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Review</label>
        <referenceTo>Document_Review__c</referenceTo>
        <relationshipLabel>Document Review Feedback Form</relationshipLabel>
        <relationshipName>Document_Review_Feedback_Form</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Dramatic_Enough_Change__c</fullName>
        <label>Dramatic Enough Change?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not sure,more information is needed.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Engage_with_External_PartnerSV__c</fullName>
        <label>Engage with External Partner</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Engage_with_external_partner__c</fullName>
        <label>Engage with external partner</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Explore_in_Site_Visit__c</fullName>
        <label>Explore in Site Visit</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>InfrastructureSV__c</fullName>
        <label>Infrastructure</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Infrastructure__c</fullName>
        <label>Infrastructure</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>LeadershipSV__c</fullName>
        <label>Leadership</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Leadership__c</fullName>
        <label>Leadership</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Overall_Comments__c</fullName>
        <label>Overall Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Overall_level_of_concern__c</fullName>
        <label>Overall level of concern?</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannot Determine</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Remain_Open1__c</fullName>
        <label>Remain Open ?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Remain_OpenSVP__c</fullName>
        <label>Remain Open?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Remain_OpenSV__c</fullName>
        <label>Remain Open</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Remain_Open__c</fullName>
        <label>Remain Open</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Return_on_InvestmentSV__c</fullName>
        <label>Return on Investment</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Return_on_Investment__c</fullName>
        <label>Return on Investment</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>SchoolDistrict__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>School/District</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Document Review Feedback Form</relationshipLabel>
        <relationshipName>Document_Review_Feedback_Form</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>SchoolNameCode__c</fullName>
        <formula>SchoolDistrict__r.SCHOOL_NUMBER__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School Name/Code</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Specify_the_additional_info_required__c</fullName>
        <label>Specify the additional info required</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>VIP_Date_Time_Submitted__c</fullName>
        <label>VIP Date/Time Submitted</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>VIP_Foreign_Language__c</fullName>
        <label>VIP Foreign Language</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>VIP_Form_Branding__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VIP Form Branding</label>
        <referenceTo>VIPForm__VIP_Form_Branding__c</referenceTo>
        <relationshipLabel>Document Review Feedback Form</relationshipLabel>
        <relationshipName>Document_Review_Feedback_Form</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>VIP_Form_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VIP Form Template</label>
        <referenceTo>VIPForm__VIP_Template__c</referenceTo>
        <relationshipLabel>Document Review Feedback Form</relationshipLabel>
        <relationshipName>Document_Review_Feedback_Form</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>VIP_Template_Status__c</fullName>
        <label>VIP Template Status</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Document Review Feedback Form</label><nameField>
        <label>Reviewer Names</label>
        <type>Text</type>
    </nameField><pluralLabel>Document Review Feedback Form</pluralLabel><sharingModel>Private</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><recordTypes>
        <fullName>Document_Review_Feedback_Form_Overall</fullName>
        <active>true</active>
        <label>Document Review Feedback Form Overall</label>
    </recordTypes></CustomObject>